# loot

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  linux.cpp  linux.h  linux_loot.cpp  linux_platform.cpp  linux_platform.h  loot.cpp  loot.h  platform.h  types.h  win32.cpp  win32_loot.cpp  win32_platform.cpp  win32_platform.h
